core/src/main/web/app/styles/theme/ambiance.scss
/*
 *  Copyright 2014 TWO SIGMA OPEN SOURCE, LLC
 *
 *  Licensed under the Apache License, Version 2.0 (the "License");
 *  you may not use this file except in compliance with the License.
 *  You may obtain a copy of the License at
 *
 *         http://www.apache.org/licenses/LICENSE-2.0
 *
 *  Unless required by applicable law or agreed to in writing, software
 *  distributed under the License is distributed on an "AS IS" BASIS,
 *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 *  See the License for the specific language governing permissions and
 *  limitations under the License.
 */

$main-theme-panel-background: #202020;
$main-theme-menu-background: black;
$main-theme-color: white;

$navbar-inverse-bg: #3f5264;
$navbar-default-bg: $main-theme-menu-background;
$navbar-default-link-color: $main-theme-color;
//#3f5264;
$navbar-default-link-hover-color: #fff;
$navbar-default-link-active-color: #fff;
$navbar-default-link-hover-bg: #39a9ed;
$navbar-default-link-active-bg: #39a9ed;

$navbar-default-color: $main-theme-color !default;
//#777 !default;
$navbar-default-border: darken($navbar-default-bg, 6.5%) !default;

// Navbar links
$navbar-default-link-disabled-color: #ccc !default;
$navbar-default-link-disabled-bg: transparent !default;

// Navbar brand label
$navbar-default-brand-color: $navbar-default-link-color !default;
$navbar-default-brand-hover-color: darken($navbar-default-brand-color, 10%) !default;
$navbar-default-brand-hover-bg: transparent !default;

// Navbar toggle
$navbar-default-toggle-hover-bg: #ddd !default;
$navbar-default-toggle-icon-bar-bg: #888 !default;
$navbar-default-toggle-border-color: #ddd !default;

$dropdown-menu-background: $main-theme-menu-background !default;
$dropdown-menu-color: $main-theme-color !default;

$std-fg-color:          #e6e1dc;
$std-bg-color:          #2d2d37;
$std-border:            #7b7462;
$cell-border:           #7e7a78;

$std-out-color:         #42A2D2;
$std-err-color:         #e48d71;

$std-btn-bg:            #505050;
$primary-btn-bg:        #39a9ed;
$btn-danger-bkg:        #d9534f;

$std-link-color:        #f4c20b;
$notebook-link-color:   #d6bb6d;

$std-hover-bg:          #1492df;
$std-hover-border:      #117dbe;

$cm-selection-color:    #0662D2;
$ef-active-control-bg:  #3B99FC;

$markdown-heading-color: #aac6e3;

$scrollbar-width: 8px; // default size scrollbar looks ugly in this theme
$scrollbar-track-color: $std-btn-bg;
$text-cursor: url('../images/ambiance/ambiance-i-beam.png') 5 9, text;

$marked-argument-unchanged-border: inset 0 0 5px #158d76;
$marked-argument-unchanged-color: #1c96be;

$marked-argument-changed-border: inset 0 0 5px #285d95;



$ui-icons: url('../images/ambiance/ui-icons_ambiance_256x240.png');

@import "base-theme";

.beaker-theme-ambiance { @extend .base-theme; }

